Changes in version 1.021

- Fixed typo bug in str_catfv and str_copyfv that caused failures on (at
  least) PPC and S390 architectures.  Thanks Gerrit Pape.

- Fixed 32-to-64 bit sign extension bug in fmt_multi on some 64-bit
  platforms.  Thanks Gerrit Pape.

- installer/instcheck program libraries now optionally install into a
  prefix directory specified on the command line.

- Installation is now done under seperate include/lib directories.

- Added sysdep for "extern int daylight" (replaced by a macro if not
  present).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.020

- Fixed a couple of length counting bugs in the fmt number code.

- Added multiple-item formatting functions fmt_multi (similar to printf,
  but safer), fmt_multiv, obuf_putf, str_catf, and str_copyf, as well as
  a set of formatted message functions.

Note: As of this version, a C99-compatible compiler is required to build
the software.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.019

- Broke the iobuf includes into smaller parts.

- Added low-level fcntl wrapper functions: fcntl_{fd,fl}_{off,on}

- Added cloexec_{off,on} functions to manipulate the close-on-exec flag.

- Selfpipes now close-on-exec to prevent the pipe from being exported to
  child processes.

- Changed the error in ibuf_getnetstring from EPROTO to EPROTOTYPE to
  fix compile errors on *BSD systems.  Thanks Ville Walveranta.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.018
