@@ -119,8 +119,11 @@ int opensubdir(int dir, const char* subdir)
 
 int main(int argc, char* argv[])
 {
+  const char* tmp;
   if (argc > 1)
     prefix = argv[1];
+  else if ((tmp = getenv("install_prefix")) != 0)
+    prefix = tmp;
   if ((sourcedir = open(".", O_RDONLY)) == -1)
     die1sys(1, "Could not open working directory");
   umask(077);
